# plasma-mycroft-mobile

./: CMakeLists.txt  README.md
plasmoid/: Messages.sh  metadata.desktop
plugin/: CMakeLists.txt  mycroftPlasmoid.notifyrc  mycroftPlasmoidMobile.notifyrc  mycroftplasmoid_dbus.cpp  mycroftplasmoidmobileplugin.cpp  mycroftplasmoidmobileplugin.h  qmldir
po/az/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/ca/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/ca@valencia/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/cs/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/da/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/de/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/en_GB/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/eo/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/es/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/et/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/eu/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/fi/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/fr/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/gl/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/hu/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/ia/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/it/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/ja/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
po/ka/: plasma_applet_org.kde.plasma.mycroftplasmoidmobile.po
(+43 files in other folders)
